# ErgoSense

./: .dockerignore  .gitignore  Dockerfile  README.md  ergo_web.py  main.py  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
config/: defaults.py
core/: calibration.py  landmark_extractor.py  pose_detector.py  posture_analyzer.py  processing.py
monitoring/: alert_system.py  timer_manager.py
utils/: camera.py  logging_config.py  system_notifier.py
