[project]
name = "ergosense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "streamlit>=1.49.1",
    "streamlit-webrtc>=0.63.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
